# Discord-Reviewer

./: README.md  config.py  main.py  pyproject.toml  requirements.txt  resources.py  tiers.db
api/: __init__.py
api/cogs/: admin.py  categories.py  help.py  review.py  tests.py
application/: __init__.py
application/commands/: create_category_command.py  delete_all_categories_command.py  delete_category_command.py  upsert_prefix_command.py
application/handlers/: ability_review_handler.py  character_review_handler.py  item_review_handler.py  training_review_handler.py
application/queries/: get_prefix_query.py  review_ability_query.py  review_character_query.py  review_item_query.py  review_training_query.py  verify_content_query.py  view_all_categories_query.py  view_category_query.py
domain/: __init__.py
domain/interfaces/: i_repository.py
domain/utils/: admin_ability_insights.py  admin_character_insights.py  admin_item_insights.py  category_evaluator.py  cluster_manager.py  data_normalization.py  discord_embed.py  discord_extractor.py  extracting_data.py  general_metadata_extractor.py  messy_text_data_extractor.py  power_analyzer.py  preprocessing.py  summarizing_data.py  training_log_evaluator.py  url_extractor.py  verification_token.py
infrastructure/: __init__.py
infrastructure/interfaces/: i_category_repository.py  i_prefix_repository.py
infrastructure/persistence/: category_repository.py  prefix_repository.py
